--- a/DsEp/config/config/config.properties
+++ b/DsEp/config/config/config.properties
@@ -13,3 +13,11 @@ email.password=
 
 gov.xzsp.lxhurl=http://127.0.0.1:8888/xzsp/lsh.jsp
 gov.xzsp.sendurl=http://127.0.0.1:8888/xzsp/send.jsp
+
+
+######## jskeyupload
+jskey.upload.savePath=C:/DsworkUploadTemp
+#jskey.upload.maxSize=bit
+jskey.upload.maxSize=10485760
+jskey.upload.image=jpg,jpeg,gif,png
+jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z
