--- a/DsSSO/sso-client/web/WEB-INF/web.xml
+++ b/DsSSO/sso-client/web/WEB-INF/web.xml
@@ -13,7 +13,7 @@
 	</listener>
 
 	<filter>
-		<filter-name>sso</filter-name>
+		<filter-name>websso</filter-name>
 		<filter-class>dswork.sso.WebFilter</filter-class>
 		<init-param>
 			<param-name>ssoURL</param-name>
@@ -37,15 +37,15 @@
 		</init-param>
 	</filter>
 	<filter-mapping>
-		<filter-name>sso</filter-name>
+		<filter-name>websso</filter-name>
 		<url-pattern>/manage/*</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
-		<filter-name>sso</filter-name>
+		<filter-name>websso</filter-name>
 		<url-pattern>/1.html</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
-		<filter-name>sso</filter-name>
+		<filter-name>websso</filter-name>
 		<url-pattern>/2.html</url-pattern>
 	</filter-mapping>
 	
