--- a/DsCommon/config/config/config.properties
+++ b/DsCommon/config/config/config.properties
@@ -4,3 +4,6 @@ jdbc.dialect.mybatis=dswork.core.mybatis.dialect.LimitOffsetDialect
 jdbc.url=jdbc:mysql://127.0.0.1:3306/dswork?characterEncoding=UTF-8
 jdbc.username=dswork
 jdbc.password=dswork
+
+dswork.id.size=10
+dswork.id.code=0
