--- a/web/.classpath
+++ b/web/.classpath
@@ -7,5 +7,6 @@
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
