--- a/DsCommon/.classpath
+++ b/DsCommon/.classpath
@@ -11,7 +11,6 @@
 	<classpathentry kind="src" path="dswork.common.user"/>
 	<classpathentry kind="src" path="dswork.common.user.org"/>
 	<classpathentry kind="src" path="dswork.common.user.role"/>
-	<classpathentry kind="src" path="dswork.flow"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAEE">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.nondependency" value=""/>
@@ -33,6 +32,11 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="/Lib/module/dswork/sso/dswork.sso.jar">
+		<attributes>
+			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="/Lib/module/dswork/dswork.flow.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
