--- a/DsCommon/web/WEB-INF/web.xml
+++ b/DsCommon/web/WEB-INF/web.xml
@@ -57,7 +57,7 @@
 		<filter-class>dswork.sso.WebFilter</filter-class>
 		<init-param><param-name>ssoURL</param-name>     <param-value>http://127.0.0.1:8888/sso/api</param-value></init-param>
 		<init-param><param-name>ssoName</param-name>    <param-value>DsCommon</param-value></init-param>
-		<init-param><param-name>ssoPassword</param-name><param-value>abc123456</param-value></init-param>
+		<init-param><param-name>ssoPassword</param-name><param-value>1</param-value></init-param>
 		<init-param><param-name>webURL</param-name>     <param-value>https://sso-server/sso</param-value></init-param>
 		<init-param><param-name>ignoreURL</param-name>  <param-value>/menu.jsp</param-value></init-param>
 		<init-param><param-name>sameDomain</param-name> <param-value>true</param-value></init-param>
