--- a/DsDemo/DemoJava/src/config/config.properties
+++ b/DsDemo/DemoJava/src/config/config.properties
@@ -10,7 +10,7 @@ jdbc.password=demo
 
 
 ######## jskeyupload
-jskey.upload.savePath=C:/DsworkUploadTemp
+jskey.upload.savePath=/DsworkUploadTemp
 jskey.upload.maxSize=10485760
 jskey.upload.image=jpg,jpeg,gif,png
 jskey.upload.file=bmp,doc,docx,gif,jpeg,jpg,pdf,png,ppt,pptx,rar,rtf,txt,xls,xlsx,zip,7z
