--- a/DsEp/web/WEB-INF/web.xml
+++ b/DsEp/web/WEB-INF/web.xml
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?> 
-<web-app version="2.5" 
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app version="3.0" 
 	xmlns="http://java.sun.com/xml/ns/javaee" 
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
+	metadata-complete="false">
 	<filter>
 		<filter-name>encodingFilter</filter-name>
 		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -52,12 +52,6 @@
 	</servlet-mapping>
 
 
-
-	<servlet>
-		<servlet-name>autoload</servlet-name>
-		<servlet-class>common.auto.AutoServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
 
 	<filter><filter-name>authFilter</filter-name><filter-class>common.auth.AuthFilter</filter-class></filter>
 	<filter-mapping>
