--- a/search/web/WEB-INF/web.xml
+++ b/search/web/WEB-INF/web.xml
@@ -1,13 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?> 
-<web-app version="2.5" 
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app version="3.0" 
 	xmlns="http://java.sun.com/xml/ns/javaee" 
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-	<servlet>
-		<servlet-name>auto</servlet-name>
-		<servlet-class>common.auto.AutoServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" 
+	metadata-complete="false">
 	<welcome-file-list>
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
