--- a/DsEp/web/WEB-INF/web.xml
+++ b/DsEp/web/WEB-INF/web.xml
@@ -54,18 +54,9 @@
 
 
 	<filter><filter-name>authFilter</filter-name><filter-class>common.auth.AuthFilter</filter-class></filter>
-	<filter-mapping>
-		<filter-name>authFilter</filter-name>
-		<url-pattern>/cms/*</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>authFilter</filter-name>
-		<url-pattern>/ep/*</url-pattern>
-	</filter-mapping>
-	<filter-mapping>
-		<filter-name>authFilter</filter-name>
-		<url-pattern>/manage/*</url-pattern>
-	</filter-mapping>
+	<filter-mapping><filter-name>authFilter</filter-name><url-pattern>/cms/*</url-pattern></filter-mapping>
+	<filter-mapping><filter-name>authFilter</filter-name><url-pattern>/ep/*</url-pattern></filter-mapping>
+	<filter-mapping><filter-name>authFilter</filter-name><url-pattern>/manage/*</url-pattern></filter-mapping>
 
 
 
