--- a/CodeBuilder/build.xml
+++ b/CodeBuilder/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <project default="init">
 <target name="init">
-	<exec command="E:/Workspaces/workspaceDswork/CodeBuilder/builder/Builder.exe mime.xml" failonerror="true"></exec>
+	<exec command="E:/Workspaces/MySpace/dswork/CodeBuilder/builder/Builder.exe your.xml" failonerror="true"></exec>
 </target>
 </project>
