--- a/DsEp/.classpath
+++ b/DsEp/.classpath
@@ -42,5 +42,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/Lib/module/dswork/sso/dswork.sso.jar" sourcepath="F:/leying/Workspaces/workspaceJava/DsSSO/sso-client"/>
 	<classpathentry kind="output" path="web/WEB-INF/classes"/>
 </classpath>
