--- a/DsEp/www/WEB-INF/web.xml
+++ b/DsEp/www/WEB-INF/web.xml
@@ -80,7 +80,7 @@
 	
 	<filter>
 		<filter-name>authOwnSSOFilter</filter-name>
-		<filter-class>common.web.auth.AuthOwnSSOFilter</filter-class>
+		<filter-class>common.authown.AuthOwnSSOFilter</filter-class>
 	</filter>
 	<filter-mapping><filter-name>authOwnSSOFilter</filter-name><url-pattern>/cms/*</url-pattern></filter-mapping>
 -->
@@ -89,7 +89,7 @@
 
 	<filter>
 		<filter-name>authOwnFilter</filter-name>
-		<filter-class>common.web.auth.AuthOwnFilter</filter-class>
+		<filter-class>common.authown.AuthOwnFilter</filter-class>
 	</filter>
 	<filter-mapping><filter-name>authOwnFilter</filter-name><url-pattern>/cms/*</url-pattern></filter-mapping>
 </web-app>
