--- a/DsSSO/sso/web/WEB-INF/web.xml
+++ b/DsSSO/sso/web/WEB-INF/web.xml
@@ -14,13 +14,13 @@
 
 	<context-param>
 		<param-name>log4jConfiguration</param-name>
-		<param-value>classpath:config/log4j2.xml</param-value>
+		<param-value>classpath:/config/log4j2.xml</param-value>
 	</context-param>
 	<listener><listener-class>org.apache.logging.log4j.web.Log4jServletContextListener</listener-class></listener>
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/classes/config/applicationContext*.xml</param-value>
+		<param-value>classpath:/config/applicationContext*.xml</param-value>
 	</context-param>
 	<listener><listener-class>org.springframework.web.util.IntrospectorCleanupListener</listener-class></listener>
 	<listener><listener-class>org.springframework.web.context.ContextLoaderListener</listener-class></listener>
