--- a/DsWorkJava/dswork-parent/pom.xml
+++ b/DsWorkJava/dswork-parent/pom.xml
@@ -175,7 +175,7 @@
 			
 			<dependency><groupId>org.apache.tomcat.embed</groupId><artifactId>tomcat-embed-core</artifactId><version>${v.tomcat-embed}</version><scope>provided</scope></dependency>
 			
-			<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-ee</artifactId><version>${v.dswork}</version></dependency>
+			<dependency><groupId>com.github.skeychen</groupId><artifactId>dswork-ee</artifactId><version>${v.dswork}</version><scope>provided</scope></dependency>
 			
 			<dependency><groupId>mysql</groupId><artifactId>mysql-connector-java</artifactId><version>${v.mysql}</version></dependency>
 			
