--- a/DsWorkJava/dswork-ee/pom.xml
+++ b/DsWorkJava/dswork-ee/pom.xml
@@ -17,8 +17,19 @@
 		<relativePath>../dswork-parent/pom.xml</relativePath>
 	</parent>
 
+	<properties>
+		<v.tomcat-embed>8.0.53</v.tomcat-embed>
+	</properties>
+
 	<dependencies>
-		<dependency><groupId>org.apache.tomcat.embed</groupId><artifactId>tomcat-embed-core</artifactId><scope>provided</scope></dependency>
+		<dependency><groupId>org.apache.tomcat</groupId><artifactId>tomcat-annotations-api</artifactId><version>${v.tomcat-embed}</version></dependency>
+		<dependency><groupId>org.apache.tomcat.embed</groupId><artifactId>tomcat-embed-logging-juli</artifactId><version>${v.tomcat-embed}</version></dependency>
+		<dependency><groupId>org.apache.tomcat.embed</groupId><artifactId>tomcat-embed-logging-log4j</artifactId><version>${v.tomcat-embed}</version></dependency>
+		<dependency><groupId>org.apache.tomcat.embed</groupId><artifactId>tomcat-embed-core</artifactId><version>${v.tomcat-embed}</version></dependency>
+		<dependency><groupId>org.apache.tomcat.embed</groupId><artifactId>tomcat-embed-el</artifactId><version>${v.tomcat-embed}</version></dependency>
+		<dependency><groupId>org.eclipse.jdt</groupId><artifactId>ecj</artifactId><version>3.12.3</version></dependency>
+		<dependency><groupId>org.apache.tomcat.embed</groupId><artifactId>tomcat-embed-jasper</artifactId><version>${v.tomcat-embed}</version></dependency>
+		<dependency><groupId>org.apache.tomcat.embed</groupId><artifactId>tomcat-embed-websocket</artifactId><version>${v.tomcat-embed}</version></dependency>
 	</dependencies>
 
 	<build>
